--- a/googlesheetsmodifier.ui
+++ b/googlesheetsmodifier.ui
@@ -244,6 +244,32 @@
         </widget>
        </item>
        <item>
+        <widget class="QGroupBox" name="groupBox_write_option">
+         <property name="title">
+          <string/>
+         </property>
+         <layout class="QHBoxLayout" name="horizontalLayout_11">
+          <item>
+           <widget class="QRadioButton" name="radioButton_option_rewrite">
+            <property name="text">
+             <string>Rewrite</string>
+            </property>
+            <property name="checked">
+             <bool>true</bool>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QRadioButton" name="radioButton_option_append">
+            <property name="text">
+             <string>Append</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </widget>
+       </item>
+       <item>
         <widget class="QPushButton" name="ButtonSave">
          <property name="text">
           <string>Save</string>
