--- a/googlesheetsmodifier.ui
+++ b/googlesheetsmodifier.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>861</width>
-    <height>718</height>
+    <height>871</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -378,7 +378,7 @@
     </layout>
    </item>
    <item>
-    <layout class="QVBoxLayout" name="verticalLayout_7" stretch="3,1">
+    <layout class="QVBoxLayout" name="verticalLayout_7" stretch="4,1">
      <property name="bottomMargin">
       <number>0</number>
      </property>
@@ -386,7 +386,11 @@
       <widget class="QTableView" name="tableGoogleSheets"/>
      </item>
      <item>
-      <widget class="QTextEdit" name="textEdit"/>
+      <widget class="QTextEdit" name="textEdit">
+       <property name="placeholderText">
+        <string>application log...</string>
+       </property>
+      </widget>
      </item>
     </layout>
    </item>
